Fix styling issues with navbar and main section
- Fix uneven spacing above/below nav items
- Add custom padding to navbar and adjust top padding in main
- Add spacing at bottom of user dropdown and align to end of container
- Fix items in main section not stacking vertically

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -6,10 +6,11 @@ html, body {
 }
 
 main {
-    padding-top: 62px;
+    padding-top: 50px;
     flex: 1;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 .btn-custom {
@@ -27,6 +28,10 @@ main {
 }
 
 /* Navbar */
+.navbar {
+    padding: 2px 0;
+}
+
 #nav-logo {
     height: 35px;
 }
